# sim2sim

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  my_iris.yaml  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
data/: tomato_soup_can_dualsdf_sphere.pkl
data/anvil/: anvil.vtk
data/dumbell/: dumbell.vtk
data/hammer/: hammer.vtk
data/pepper/: yellow_bell_pepper_no_stem_low.vtk
data/spam/: spam.vtk
data/ycb_mustard_bottle/: mustard_bottle_dualsdf_sphere.pkl  mustard_csm_dualsdf_box.pkl  mustard_csm_dualsdf_boxes.pkl  mustard_csm_dualsdf_spheres.pkl  mustard_ring_dualsdf_boxes.pkl  mustard_ring_dualsdf_spheres.pkl  mustard_ring_tsdf.mtl  mustard_ring_tsdf.vtk  mustard_ring_tsdf_dualsdf_spheres.pkl  ycb_mustard_bottle_textured.mtl
data/ycb_potted_meat_can/: potted_meat_can_dualsdf_sphere.pkl  ycb_potted_meat_can_textured.mtl
data/ycb_tomato_soup_can/: tomato_soup_can_tsdf.mtl  tomato_soup_can_tsdf.vtk  tomato_soup_can_tsdf_dualsdf_spheres.pkl  ycb_tomato_soup_can_textured.mtl
experiments/: iiwa_rearrangement.yaml  table_pid_simple.yaml
experiments/floor_drop/: coacd.yaml  convex_decomp.yaml  dualsdf_sphere.yaml  floor_drop.yaml  floor_drop_coacd.yaml  floor_drop_convex_decomp.yaml  floor_drop_dualsdf_sphere.yaml  floor_drop_gmm.yaml  floor_drop_metaball.yaml  floor_drop_quadric_decimation.yaml  floor_drop_sphere.yaml  gmm.yaml  quadric_decimation.yaml  sphere.yaml
experiments/iiwa_manip/: iiwa_manip_push_in_hole_pepper.yaml  iiwa_manip_push_in_hole_tomato_soup_can.yaml  iiwa_manip_rearrangement_pepper.yaml  (+2 more)
models/: actuated_table.sdf  floor.sdf  table_pid_directive.yaml  table_pid_manipuland_directive.yaml  table_pid_scene_directive.yaml  ycb_tomato_soup_can.sdf  ycb_tomato_soup_can_simplified.sdf
scripts/: batch_evaluate_representation_collections.sh  collect_planar_pushing_data.py  collect_random_force_data.py  collect_representation_specific_random_force_data.py  collect_simulation_complexity_data.py  collect_sphere_pushing_data.py  compute_real2sim_metrics.py  evaluate_floor_drop.py  evaluate_primitive_representation_collection.py  evaluate_representation_collections.sh  experiments.sh  postprocess_metric_learning_dataset.py  postprocess_simulation_complexity_data.py  rank_real2sim_approaches_final_errors.py  run_experiment.py  sim2sim.py  supercloud.sh  table_pid.py  visualize_contact_forces.py  visualize_planar_pushing_contact_forces.py  visualize_sdf.py  visualize_sphere_pushing_contact_forces.py
(+262 files in other folders)
