[tool.poetry]
name = "sim2sim"
version = "0.1.0"
description = ""
authors = ["Nicholas Pfaff <nepfaff@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = {version = "2.0.1", source = "torch_cuda118"}
pytorch3d = {url = "https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py310_cu118_pyt201/pytorch3d-0.7.4-cp310-cp310-linux_x86_64.whl"}
numpy = "^1.25.2"
wandb = "^0.15.10"
trimesh = "^3.23.5"
open3d = "^0.17.0"
matplotlib = "3.4.3"
tabulate = "^0.9.0"
scipy = "^1.11.2"
tqdm = "^4.66.1"
black = "^23.9.1"
pre-commit = "^3.4.0"
meshio = "^5.3.4"
coacd = "^0.0.5"
manipulation = {git = "https://github.com/RussTedrake/manipulation.git"}
prettytable = "^3.9.0"
pyrender = "^0.1.45"
plotly = "^5.17.0"
pyopengl-accelerate = "^3.1.7"
scikit-learn = "^1.3.0"
addict = "^2.4.0"
pandas = "^2.1.0"
ipython = "^8.15.0"

[[tool.poetry.source]]
name = "torch_cuda118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
